--- a/Project/Project/Views/Home/Index.cshtml
+++ b/Project/Project/Views/Home/Index.cshtml
@@ -11,12 +11,13 @@
     <title>Project</title>
 </head>
 <body>
-    <script src="~/js/dist/bundle.js"></script>
 <header>
     <h1>Project</h1>
 </header>
 <main>
     <div id="root"></div>
+
+    <script src="~/dist/bundle.js"></script>
 </main>
 <footer>
     <p>.NET Student Labs 2019</p>
