Remove text input

--- a/Project/Project/Views/Home/Index.cshtml
+++ b/Project/Project/Views/Home/Index.cshtml
@@ -1,11 +1,8 @@
-﻿@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="cache-control" content="no-cache" />
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/index.css">
     <title>Project</title>
@@ -17,7 +14,7 @@
 <main>
     <div id="root"></div>
 
-    <script src="~/dist/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </main>
 <footer>
     <p>.NET Student Labs 2019</p>
