Added Bootstrap styles

--- a/Project/Project/Views/Home/Index.cshtml
+++ b/Project/Project/Views/Home/Index.cshtml
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="cache-control" content="no-cache" />
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href ="/css/bootstrap.min.css"/>
     <title>Project</title>
 </head>
 <body>
@@ -13,7 +14,6 @@
 </header>
 <main>
     <div id="root"></div>
-
     <script src="/dist/bundle.js"></script>
 </main>
 <footer>
