--- a/Project/Project/Views/Home/Index.cshtml
+++ b/Project/Project/Views/Home/Index.cshtml
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="cache-control" content="no-cache" />
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href ="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
     <title>Project</title>
 </head>
 <body>
