--- a/Project/Project/wwwroot/css/index.css
+++ b/Project/Project/wwwroot/css/index.css
@@ -19,6 +19,12 @@ main {
     margin: 50px auto 0 auto;
 }
 
+#root {
+    display: flex;
+    flex-direction: row;
+    overflow: auto;
+}
+
 aside {
     float: left;
     width: 30%;
