Created test project

--- a/Project/Project/Views/Home/Index.cshtml
+++ b/Project/Project/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width" />
+    <link href="/css/normalize.css" rel="stylesheet"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <base href="/" />
     <title>Project</title>
